set-up pipeline 2.0

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
         <v-app id="inspire">
             <v-navigation-drawer v-model="drawer" fixed app>
                 <v-list dense>
-                    <v-list-tile @click="" href="/ui/">
+                    <v-list-tile @click="" href="/restmonkey/ui/">
                         <v-list-tile-action>
                             <v-icon>poll</v-icon>
                         </v-list-tile-action>
@@ -24,7 +24,7 @@
                             <v-list-tile-title>Reports</v-list-tile-title>
                         </v-list-tile-content>
                     </v-list-tile>
-                    <v-list-tile @click="" href="/ui/victimize.html">
+                    <v-list-tile @click="" href="/restmonkey/ui/victimize.html">
                         <v-list-tile-action>
                             <v-icon>poll</v-icon>
                         </v-list-tile-action>
