vuetify revert to version 1.0.19 --- new version has style issues :)

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/vuetify@1.0.19/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <style>
         p.wordwrap {
@@ -290,5 +290,5 @@
 <script src="https://unpkg.com/vue"></script>
 <!-- <script src="https://unpkg.com/vuex@2.0.0"></script> -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+<script src="https://unpkg.com/vuetify@1.0.19/dist/vuetify.js"></script>
 <script type='text/javascript' src='index.js'></script>
