--- a/ui/victimize.html
+++ b/ui/victimize.html
@@ -84,33 +84,33 @@
                                     <v-card flat>
                                         <v-card-text>
                                             <v-card-text>
-                                                <v-select :items="preloadedTests" label="Use a preloaded test" item-text="url" item-value="uuid" single chips
+                                                <v-select :items="preloadedTests" label="Use a preloaded test" item-text="name" item-value="uuid" single chips
                                                     max-height="auto" autocomplete clearable @change="fillData">
                                                     
                                                     <template slot="selection" slot-scope="data">
                                                         <v-chip :selected="data.selected" :key="data.item.uuid" close label @input="removeChip(data.item)">
                                                             <v-icon left>poll</v-icon>
-                                                            {{ data.item.url }}
+                                                            {{ data.item.name }}
                                                         </v-chip>
                                                     </template>
                                             
                                                     <template slot="item" slot-scope="data">
                                                         <template v-if="typeof data.item !== 'object'">
-                                                            <v-list-tile-content v-text="data.item.url"></v-list-tile-content>
+                                                            <v-list-tile-content v-text="data.item.name"></v-list-tile-content>
                                                         </template>
                                                         <template v-else>
                                                             <v-list-tile-avatar>
                                                                 <v-icon left>poll</v-icon>
                                                             </v-list-tile-avatar>
                                                             <v-list-tile-content>
-                                                                <v-list-tile-title v-html="data.item.url"></v-list-tile-title>
+                                                                <v-list-tile-title v-html="data.item.name"></v-list-tile-title>
                                                             </v-list-tile-content>
                                                         </template>
                                                     </template>
                                                 </v-select>
                                             </v-card-text>
                                             <form>
-                                                <v-text-field v-model="monkeyconfig.url" label="URL" required></v-text-field>
+                                                <v-text-field ref="url" v-model="monkeyconfig.url" label="URL" required></v-text-field>
                                                 <v-text-field type="number" v-model.number="monkeyconfig.requests" label="Requests" required></v-text-field>
                                                 <v-text-field type="number" v-model.number="monkeyconfig.threads" label="Threads" required></v-text-field>
                                                 <v-text-field v-model="monkeyconfig.resolve" :rules="IPaddressRule" value="IP:PORT" label="Resolve"></v-text-field>
